fix: popup container z-index

--- a/src/components/file/drop/file-drop.module.css
+++ b/src/components/file/drop/file-drop.module.css
@@ -1,5 +1,7 @@
 .container {
     position: relative;
+
+    z-index: 1;
 }
 
 .dragged {
